Center formula text

--- a/content/viii-posters/48.md
+++ b/content/viii-posters/48.md
@@ -48,7 +48,11 @@ This poster presents the results of the case study of applying an AEROSIL and mi
 
 AEROSIL is a trade name of a line of fumed silica (SiO<sub>2</sub>) products produced by the German chemical company Evonik Industries. It is a pure, very fine powder with a specific surface area of 50 <sup>2</sup>/g or more. AEROSIL is synthesized during flame hydrolysis (T \>1000°C) of silicon tetrachloride (SiCl<sub>4</sub>) by the following reaction:
 
+<div style="text-align: center; margin-bottom: 1em;">
+
 SiCl<sub>4</sub> + 2H<sub>2</sub> + O<sub>2</sub> = SiO<sub>2</sub> + 4HCl
+
+</div>
 
 The adsorption properties of AEROSIL are determined by silanol (SiOH) and siloxane (SiOSi) functional groups presented on its surface ({% cite 'Evonik n.d.' %}; {% cite 'Zhuravlev 2000' %}).
 
