fix long URL issue #117

--- a/content/i-history/5.md
+++ b/content/i-history/5.md
@@ -183,6 +183,6 @@ Comparing the condition of many paintings in the Capodimonte Museum that have be
 
 [^13]: The intervention was carried out by Giulia Zorzetti, whom I thank for information.
 
-[^14]: See <https://www.archiviostoricorestauratori.it/esplora.html?permalink=%2Frestauratori%2Fdetail%3Furl%3Dhttps%3A%2F%2Fwww.archiviostoricorestauratori.it%2Fapi%2Frestauratori%2F735.json>.
+[^14]: See [https://<wbr>www.archiviostoricorestauratori<wbr>.it<wbr>/esplora<wbr>.html<wbr>?permalink<wbr>=%2Frestauratori<wbr>%2Fdetail<wbr>%3Furl<wbr>%3Dhttps<wbr>%3A<wbr>%2F<wbr>%2Fwww<wbr>.archiviostoricorestauratori<wbr>.it<wbr>%2Fapi<wbr>%2Frestauratori<wbr>%2F735<wbr>.json](https://www.archiviostoricorestauratori.it/esplora.html?permalink=%2Frestauratori%2Fdetail%3Furl%3Dhttps%3A%2F%2Fwww.archiviostoricorestauratori.it%2Fapi%2Frestauratori%2F735.json).
 
 [^15]: My thanks to Bruno Arciprete, Luigi Coletta, Marisa Cristiano, Bruno Tatafiore, and Francesco Virnicchi, who agreed to participate in the meeting, and to Simonetta Funel, who shot the video documentation. The recording of the interview is kept in the Archivio Storico Nazionale dei Restauratori Italiani of the Associazione Giovanni Secco Suardo.
