Fix awkward image layout
Closes issue #119

--- a/content/iii-open-questions/19.md
+++ b/content/iii-open-questions/19.md
@@ -47,11 +47,11 @@ In 1982, Mecklenburg’s unpublished report “Some Aspects of the Mechanical Be
 
 Mecklenburg introduced three concepts: First, that the total tension in a painting (the double red arrow running across the painting in [fig. 19.1](#fig-19-1)) was simply the sum of the individual tensions in each layer (the smaller arrows on the far right in [fig. 19.1](#fig-19-1)). Second, that the response of each layer to changes in RH was not simply a change in dimension but also a change in stiffness. And third, that “force realignment” (later phrased as stress alignment) could explain many deformations of paintings while under tension, as in [figure 19.1a](#fig-19-1). (Curl, a separate mechanism for cupping, is described by [Hough and Michalski](/vii-modern-contemporary/40/) in these proceedings.)
 
-{% figure 'fig-19-1' 'pdf-no-bottom-border' %}
-
 Mecklenburg demonstrated the power of his model by predicting the response of a painting to wide swings in RH; his plot of tension in a sample from a 1912 painting is shown in [figure 19.2](#fig-19-2) (solid black line). Within a few years, various authors had repeated this measurement, including another sample from Mecklenburg’s 1912 painting, measured by Hedley while at CCI (solid green line). Although different authors used different materials and different procedures, the result was a universal “hockey stick” curve, with a minimum somewhere between 65% RH and 95% RH, depending on prior history and the amount of prestrain.
 
-{% figure 'fig-19-2' 'pdf-two-column' %}
+{% figure 'fig-19-1' 'pdf-two-column pdf-float-top pdf-70-percent-width pdf-no-bottom-border' %}
+
+{% figure 'fig-19-2' 'pdf-two-column pdf-float-top' %}
 
 This new knowledge informed our decisions; specifically, it influenced our pursuit of better lining supports and improvements in noninterventive options, such as backing boards, enclosed case/frame design, and protection during transit. At that time, conservators and conservation scientists at CCI and other institutions were focusing on noninterventive preventive conservation measures for the broad heritage community, recommending best practices to improve the management of the museum environment and the handling, display, storage, and transit of museum objects. Controlling the physical risks and environment around the painting—with minimal alteration of the painting’s appearance or its materials—was an important option in the conservator’s repertoire.
 
