Change position of table per author request
Closes issue #125

--- a/content/viii-posters/56.md
+++ b/content/viii-posters/56.md
@@ -24,7 +24,9 @@ The conservation of such painted banners has rarely been addressed in the litera
 
 This study addresses eighteenth- and nineteenth-century processional ecclesiastic objects painted on canvas supports, double-sided painted banners called *prapori,* and painted epitaphs, originating from wooden churches ([fig. 56.1](#fig-56-1)). The majority of these objects are stored in the collection of the Orthodox Archdiocese of Timișoara, in the Metropolis of Banat.
 
-{% figure 'fig-56-1' %}
+{% figure 'table-56-1' 'pdf-float-top' %}
+
+{% figure 'fig-56-1' 'pdf-float-top pdf-no-top-border' %}
 
 In the Christian ecclesiastic space, double-sided painted banners are always stored vertically, hanging from a pole in the narthex or the nave of the church. Banners are mounted on a special designed T-shape suspension pole, which is associated with the holy cross; this pole functionally supports a second horizontal wooden pole, called a *drug,* on which the painted fabric is draped. The wooden poles are attached to the structure of the rows of standing pews along the north and south perimeter aisles of the architectural space, except for once a year, when they are carried in processions. The display as a function of the scenography inherent to the specific moment of the ecclesiastic year induces significant stresses to the canvas due, basically, to the action of gravity and the weight of the canvas itself, leading to deformation and other mechanical damage.
 
@@ -39,8 +41,6 @@ In most examples, with rare exceptions, the canvas supports carry a sizing and/o
 Strips of material sewn all around on three of four margins of the banners’ perimeter were used as structural reinforcements to protect the regular perforated edges of the fabric; this indicates that the canvas was prestretched. Occasionally, the perimeters are decorated with patterned ribbon or, rarely, fringes of wool. Some of the painted banners carry dyed wool tassels mounted on carved wooden elements that hang from the lappets,[^4] the rectangular, triangular, or rounded bottom panels descending from the banners.
 
 Epitaphs (and, less often, banners) are painted on satin-weave dyed textiles, and the pattern of the textile is included as an element of texture in relationship with the painted surface of the composition. The painting media are proteinaceous and/or lipidic ([table 56.1](#table-56-1)) and may be associated with similar binder and pigments used to decorate wooden churches of the same period, where primed canvas strips are commonly used to secure the joints between neighboring wooden panels.
-
-{% figure 'table-56-1' 'pdf-float-top' %}
 
 ## Degradation
 
