Refine PDF layout/flow for Part I

--- a/content/i-history/1.md
+++ b/content/i-history/1.md
@@ -41,7 +41,7 @@ Long-term mechanical behavior, such as relaxation and creep, has also been measu
 
 The use of biaxial stretching, first proposed by Berger ({% cite 'Berger and Russell 2000' %}), and electronic speckle pattern interferometry (ESPI) for strain measurement ([fig. 1.3](#fig-1-3)) enabled Young and Hibberd to look in further detail at conservation issues and lining practices, such as the strain associated with stretcher attachments ({% cite 'Young and Hibberd 1999' %}; {% cite 'Young and Hibberd 2000' %}). The complex structure of stretched canvas is now understood in sufficient detail to consider computer modeling of the mechanical properties of both paintings and linings. It also offers the opportunity to study in more detail the effects of minimal treatments on more contemporary paintings ({% cite 'Hagan et al. 2007' %}; {% cite 'Hagan et al. 2011b' %}). Temporary solutions and physical protection may prove to be our best options, but many have not yet been fully assessed objectively.
 
-{% figure 'fig-1-3' %}
+{% figure 'fig-1-3' 'pdf-85-percent-width pdf-float-top pdf-no-bottom-border' %}
 
 ## Conservation Practice
 
@@ -91,7 +91,7 @@ Similarly, if we add a consolidating or lining adhesive that can become acidic o
 
 Enclosure on display or in storage to reduce moisture exchange and deposition of external pollution, such as nitrogen dioxide and particulates, is an important conservation measure ({% cite 'McClure 2012' %}) and a more sustainable alternative to air-conditioning, but measurements within enclosures demonstrate that we have to be careful in its use ([fig. 1.7](#fig-1-7)).
 
-{% figuregroup '2' 'fig-1-7-a, fig-1-7-b' '**Figure 1.7** Two separate studies showing that below 0.5–1.0 air exchanges per day, the air concentration of internally generated volatile pollution soars. (a) Large-volume display cases (Thickett et al. 2007). (b) Various narrow painting frames and cases (Grøntoft et al. 2011). See Hackney 2016. Image: Stephen Hackney' %}
+{% figuregroup '1' 'fig-1-7-a, fig-1-7-b' '**Figure 1.7** Two separate studies showing that below 0.5–1.0 air exchanges per day, the air concentration of internally generated volatile pollution soars. (a) Large-volume display cases (Thickett et al. 2007). (b) Various narrow painting frames and cases (Grøntoft et al. 2011). See Hackney 2016. Image: Stephen Hackney' 'pdf-float-top pdf-1-column-group' %}
 
 The concentration in air is not in itself a measure of reaction rate, but it shows that more molecules are available to react. Below 0.5 AER (air exchange rate), the rate of off-gassing of acetic acid, both from the packaging and (some) from the object, exceeds the combined leakage rate and rate of deposition or reaction, the latter being slow processes. When reactive molecules collide, only a small proportion reacts, but in these circumstances trapped pollution molecules can collide many times and will eventually react. The introduction of sacrificial adsorbers or reactants might therefore be useful, provided they are placed close to the object.
 
