--- a/content/i-history/4.md
+++ b/content/i-history/4.md
@@ -63,7 +63,7 @@ From 1971 to 1973, five sturgeon-glue linings were performed. These are rather r
 
 Beva 371 was used for both strip-lining and lining, combined with a variety of fabrics (see [figs. 4.2](#fig-4-2), [4.3](#fig-4-3)). Initially, the preference was for TenCate, a polyvinyl alcohol fabric from the Netherlands, but this was gradually superseded by polyester sailcloth beginning in 1982, most likely introduced to the NMM by the Courtauld. Linen was used on one occasion with Beva 371 for lining but more frequently for strip-lining. Other materials were used more sporadically in conjunction with Beva 371, including woven polypropylene and glass fiber. These fabrics seem to have been used experimentally around the time of the lining conference and were not incorporated into usual practice. Glass fiber, introduced by Pierre Boissonnas ({% cite 'A. Boissonnas 1961' %}), was used over a prolonged period (1973–81), in combination with wax resin, Beva, or Beva with added wax, to help produce transparent linings.[^9]
 
-{% figure 'fig-4-3' %}
+{% figure 'fig-4-3' 'pdf-float-top' %}
 
 As surface deformations could not be addressed during a wax-resin or Beva lining, they had to be treated beforehand. The NMM developed the prestretching technique, first published at the 1974 conference, to introduce tension and address cupping and deformation out of plane ({% cite 'Chittenden, Lewis, and Percival-Prescott 2003' %}). This technique was used routinely in the 1970s and 1980s.
 
@@ -83,7 +83,7 @@ Due to failure of the previous lining along the top edge, de Loutherbourg’s *D
 
 Throughout the study, several examples of experimental lining fabrics were examined. Rowland John Robb Langmaid’s *HMS* Dido, Ajax *and* Orion *in Action Off Crete, 21 May 1941* (BHC0678) was lined in 1973 using Beva 371 and a black polypropylene fabric ([fig. 4.6](#fig-4-6)). Although well adhered, the lining textile is now displaying signs of embrittlement and degradation, with splitting on the turnover edges. Another unusual choice was the wax-resin double lining on cotton duck with a Melinex film stuck to the reverse, which was used in the 1974 relining of Dominic Serres’s *Destruction of the American Fleet at Penobscot Bay, 14 August 1779*, late eighteenth century (BHC0425). Robert Luny’s *The East Indiaman* York *and Other Vessels,* 1788 (BHC3735), was lined in 1974 onto “post office bagging,” a fairly coarse linen that had been collected as a sample during the research travels prior to the conference.[^10]
 
-{% figure 'fig-4-6' %}
+{% figure 'fig-4-6' 'pdf-float-top' %}
 
 As indicated by the conservation records, the post-1974 conference years saw a general move away from wax-resin linings on linen and toward Beva 371 linings on synthetic fabrics. The relining of Saltzmann’s *German Fleet Manoeuvres on High Seas* (BHC0648) in 1992, using Beva 371 on polyester sailcloth, exemplifies this trend. Prior to relining, the painting had suffered from a poor mix of glue paste, which exhibited hard lumps, and the inexplicable inclusion of egg and eggshell. As with the de Loutherbourg, the painting’s vast size necessitated lining in two halves, which again resulted in substantial undulations. Once it was off the hot table it was noted that the lining was not well adhered in places, and a hand lining with local pressing was employed to address the problem. Despite the initial issues, the lining was very successful, and today it is performing well, with little evidence of the undulations present before the 1992 treatment and only very slight slackness.
 
@@ -113,7 +113,7 @@ Fabri-Sil, a Teflon-impregnated glass fiber with a silicon pressure adhesive, wa
 
 In terms of lining fabrics, CIA experimented with different fabrics, almost entirely synthetics, before settling on polyester sailcloth, a fabric Hedley had thoroughly researched and tested ([fig. 4.8](#fig-4-8)) ({% cite 'Hedley and Villers 1982' '154' %}). Other polyester fabrics included Vylene and Permawear 122. In many treatment reports, lining fabrics were referred to as “polyester” or “polyester fabric,” and it is not possible to know precisely which fabrics were used.
 
-{% figure 'fig-4-8' %}
+{% figure 'fig-4-8' 'pdf-float-top' %}
 
 Glass fiber was used from 1975 until 1981, most likely for experimentation after the 1974 conference ({% cite 'P. Boissonnas 2003' %}). There were also a few examples of marouflage onto aluminum honeycomb. Polypropylene was used from 1979 and abandoned by 1981. Lascaux P110, a textile with a similar appearance to linen but made of polyester, was used from 1991 until 1995.
 
@@ -157,7 +157,7 @@ The authors would like to thank the following persons and institutions. The Gett
 
 [Table 4.1](#table-4-1) lists the seventeen paintings from the CIA and RMG collections that were examined by an expert panel for this study.
 
-{% figure 'table-4-1' 'pdf-float-top' %}
+{% figure 'table-4-1' %}
 
 {% backmatter %}
 
