--- a/content/i-history/5.md
+++ b/content/i-history/5.md
@@ -129,7 +129,7 @@ The practice of transfer was carried out very early in Naples, since at least th
 
 The restoration of a painting by Fedele Fischetti, *Noli me tangere*, from the Church of Santa Caterina da Siena ([fig. 5.7a](#fig-5-7)), in 1998,[^13] enabled us to examine a material example of a partial transfer procedure, probably carried out by the artist himself during the execution of the painting, which can be traced back to 1766–67. There are documents that refer to Fischetti’s activity as a restorer ({% cite 'Nappi 1984' '320' %}), but in this case it was possible to verify the procedure carried out long ago directly on a painting.
 
-{% figuregroup '2' 'fig-5-7-a, fig-5-7-b' '**Figure 5.7** (a) Fedele Fischetti (Italian, 1732–1792), *Noli me tangere*. Oil on canvas, 355 × 182 cm (139 3/4 × 71 5/8 in.), from the Church of Santa Caterina da Siena, Napoli (1766–67). (b) Diagram showing the boundary line between the lower part, which retains the original canvas, and the upper part, which has undergone the partial transfer (in black) and the areas affected by old “integrations” (in green). Image: (a) Ministero dell’Interno, Fondo Edifici di Culto (F.E.C.); (b) Napoli, Museo e Real Bosco di Capodimonte, Centro Documentazione Restauro' %}
+{% figuregroup '2' 'fig-5-7-a, fig-5-7-b' '**Figure 5.7** (a) Fedele Fischetti (Italian, 1732–1792), *Noli me tangere*. Oil on canvas, 355 × 182 cm (139 3/4 × 71 5/8 in.), from the Church of Santa Caterina da Siena, Napoli (1766–67). (b) Diagram showing the boundary line between the lower part, which retains the original canvas, and the upper part, which has undergone the partial transfer (in black) and the areas affected by old “integrations” (in green). Image: (a) Ministero dell’Interno, Fondo Edifici di Culto (F.E.C.); (b) Napoli, Museo e Real Bosco di Capodimonte, Centro Documentazione Restauro' 'pdf-float-top' %}
 
 Observation in raking light before restoration showed a clear difference in the surface of the lower part of the painting, which was smoother and more adherent to the canvas, while in the upper part, lifting of the poorly adhering paint layers was visible.
 
