--- a/content/i-history/6.md
+++ b/content/i-history/6.md
@@ -73,7 +73,7 @@ One example is the lining support of the eighteenth-century painting *Conclusion
 
 {% figuregroup '2' 'fig-6-1-a, fig-6-1-b' '**Figure 6.1** Unknown artist, *Conclusions of Field Marshall General Count B. H. Minikh to the Seizure of Ochakov*, 1737. Mixed techniques on silk, 172 x 143 сm (67 3/4 x 56 1/3 in.). (a) After removing old facings. (b) Detail. Image: © State Historical Museum, Moscow' %}
 
-{% figure 'fig-6-2' %}
+{% figure 'fig-6-2' 'pdf-no-bottom-border' %}
 
 {% figure 'fig-6-3' %}
 
