--- a/content/i-history/3.md
+++ b/content/i-history/3.md
@@ -109,7 +109,7 @@ In the following six years, summer programs on the subject were organized at the
 
 {% figure 'fig-3-4' %}
 
-{% figuregroup '2' 'fig-3-5, fig-3-6' '' 'pdf-stack-images' %}
+{% figuregroup '2' 'fig-3-5, fig-3-6' '' 'pdf-stack-images pdf-float-top' %}
 
 In parallel with the summer schools, a set of visual teaching aids was being produced in collaboration with the Getty Conservation Institute. The aim was to produce step-by-step images of the recently developed lining techniques, along with a detailed description of each step, as a didactic tool for teachers in canvas paintings conservation. The aids were used at each summer program and in regular courses at School of Conservation before being finalized in 1990 ({% cite 'Scharff 1995' %}).
 
