Refine PDF layout/flow for Part II

--- a/content/ii-present-practice/10.md
+++ b/content/ii-present-practice/10.md
@@ -169,13 +169,13 @@ When dry, the wet strength tissue provides good protection from mechanical stres
 
 The lining process is extremely simplified. The selected open-weave canvas is stretched on a provisional expandable lining stretcher that can accommodate a wide range of dimensions and consistently control canvas tension ([fig. 10.5](#fig-10-5)).
 
-{% figure 'fig-10-5' %}
+{% figure 'fig-10-5' 'pdf-float-top pdf-no-bottom-border' %}
 
 The adhesive mixture is then applied on the reverse of the painting in an even coat, and the working stretcher is correctly positioned on top of it. More adhesive is applied to wet the new canvas and provide a first bonding ([figs. 10.6](#fig-10-6), [10.7](#fig-10-7)).
 
-{% figure 'fig-10-6' %}
+{% figure 'fig-10-6' 'pdf-float-top pdf-no-bottom-border' %}
 
-{% figure 'fig-10-7' %}
+{% figure 'fig-10-7' 'pdf-float-top' %}
 
 The glue application behaves as a very slow humidifier that relaxes deformation and distortions. It is possible to set the time for an even humidification process, depending on the degree of deformation. In cases where deformations have been pretreated and the painting is flat, one can immediately apply gentle tension to the lining canvas and remove excess adhesive by manually pressing with wooden spatulas and other tools for an even application.
 
