--- a/content/ii-present-practice/11.md
+++ b/content/ii-present-practice/11.md
@@ -55,13 +55,13 @@ Before facing the surface, dust and mud residue were carefully removed using sof
 
 During the surface facing, a first flattening of the canvas’s deformation was possible, thanks to the moisture added by the aqueous adhesive and to some light tensioning provided by the contraction of Japanese paper while drying ([fig. 11.2](#fig-11-2)).[^5]
 
-{% figure 'fig-11-2' %}
+{% figure 'fig-11-2' 'pdf-float-top pdf-no-bottom-border' %}
 
 Using a polystyrene roller, the painting was then turned facedown to work on the back and remove the old lining adhered with glue paste.[^6] The residue of the old glue paste was carefully removed with a scalpel. In some problematic areas where the adhesive was particularly tough, an agar gel[^7] was used to swell and soften it, making removal easier.
 
 All cuts were brought back to the correct position with the aid of tension applied using tie-beams adjusted by rubber bands ([fig. 11.3](#fig-11-3)), and moisture released through a Gore-Tex fabric. Polyester fabric tie-beams were adhered to the back of the canvas with original formula Beva 371 film. The humidification, tension, and time needed were related to the extent of deformation being treated. A polyester thread was used to resew the selvages where necessary, passing through the holes of the original seam when possible.
 
-{% figure 'fig-11-3' %}
+{% figure 'fig-11-3' 'pdf-float-top' %}
 
 Many cycles of humidification and tension were needed to flatten the canvas. Due to the very large size of the painting, stretching it on a temporary loom was deemed expensive and impractical, so it was decided to tension it on a thin worktop placed directly on the floor. To do this, strips of polyester canvas[^8] were fixed to the perimeter with Beva 371 film, reactivated at two different times: the first on the polyester canvas, at 80°C, and the second on the back of the original canvas, at 65°C. This particular procedure is intended to create a stronger bond between the adhesive and the polyester canvas than between the adhesive and the original canvas, ensuring better reversibility in the future. Ideally, no adhesive will be left on the original canvas when the strips are removed; at worst, only a few traces will remain.
 
