--- a/content/ii-present-practice/12.md
+++ b/content/ii-present-practice/12.md
@@ -32,7 +32,7 @@ With the application of heat and solvents, canvas lining fabrics can be peeled a
 
 In 2016, Pierre Puvis de Chavannes’s *Philosophy* mural ([fig. 12.1](#fig-12-1)), one of nine monumental murals the artist painted for the grand staircase of the Boston Public Library in 1895–96, underwent a major conservation campaign. Delamination of the 436 × 218 cm mural canvas and failure of the underlying plaster necessitated emergency removal of the mural from the wall, mounting of the canvas onto a rigid support panel, and reinstallation in its niche. The project was presented by the authors at the 2017 American Institute of Conservation Conference General Session in Chicago; however, time constraints did not permit a thorough discussion of the unexpected failure of the aluminum honeycomb panel support during the lining procedure. This necessitated the reversal of the marouflage lining and replacement of the panel with one of better design and materials.
 
-{% figure 'fig-12-1' %}
+{% figure 'fig-12-1' 'pdf-float-top' %}
 
 In addition to describing the procedure implemented to reverse the marouflage and the successful remounting of the mural canvas, the logistical complications of undertaking such a procedure are presented in this paper. The difficulty of carrying out the reversal led to a reassessment of using Beva 371b as recommended by the manufacturers. Tests conducted on mock-up panels led to a modification of the adhesive to reduce its strength, tack, and melting point—and by extension increased its reversibility—while still retaining its essential properties as a suitable marouflage lining adhesive.
 
@@ -42,7 +42,7 @@ The murals in the grand staircase of the Boston Public Library were painted on c
 
 Upon completion, the reverse of each mural was primed with red lead in oil, rolled, shipped to Boston, and mounted to the plaster walls using the marouflage technique ([fig. 12.2](#fig-12-2)). The original method of attachment was to adhere the canvas to the wall with a paste of lead white in linseed oil applied to both the wall and the back of the canvas painting, which was then pressed onto the wall with rollers. While the adhesive was curing, the canvas was secured around the perimeter by a series of metal tacks.
 
-{% figure 'fig-12-2' %}
+{% figure 'fig-12-2' 'pdf-float-top' %}
 
 In late 2014, a large canvas bulge and undulations were discovered in the upper portions of the mural. Salt efflorescence observed on the surrounding marble confirmed moisture infiltration. None of this was a surprise, as the mural has had a history of moisture problems, as noted in 1993 when the Puvis de Chavannes murals were last conserved by the Straus Center for Conservation, Harvard Art Museums ({% cite 'Hensick, Olivier, and Pocobene 1997' %}). Mapping of the mural surface revealed that nearly 80% of the canvas had separated from the plaster substrate, yet along the left and bottom edges, the canvas was still very firmly attached to the wall.
 
@@ -80,7 +80,7 @@ At this point, the most nerve-wracking component of the project could begin: the
 
 As the mural became detached, linen facing flaps extending beyond the perimeter of the mural were wrapped and stapled to the lightweight support panels. As the work proceeded up the surface, more panels were affixed and locked together to keep the mural in plane. Finally, with much of the mural supported by the locked panel supports, the section within the arch was detached. Once the entire mural was fully detached, full-length vertical and horizontal wood stiffeners were attached to the panel support system ([fig. 12.3](#fig-12-3)). A block-and-tackle system was connected from the staging to the rigid frame support on the mural to guide it out. The supported mural was then lowered, slowly coming to rest facedown on the staging deck. The mural was then removed from the deck and transported to a specially modified treatment space within the Boston Public Library.
 
-{% figure 'fig-12-3' %}
+{% figure 'fig-12-3' 'pdf-float-top' %}
 
 The history of water leaks behind the mural precluded the possibility of remounting the mural onto a new plaster wall, so the decision was made to marouflage the mural onto a rigid panel support that could be easily installed and deinstalled in the future, if necessary. The plaster remnants on the verso were removed using first a reciprocating multitool to cut through the bulk of the plaster, followed by mechanical removal of the harder 3 mm–finish coat using chisels. The lead-white adhesive was well bound and uniform and strongly adhered to the reverse of the mural canvas, leaving none of the canvas exposed, thus it was left undisturbed. In preparation for lining, the reverse of the mural canvas was sealed with one coat of warm Beva 371b diluted with low-aromatic mineral spirits following the manufacturer’s instructions.
 
