--- a/content/ii-present-practice/14.md
+++ b/content/ii-present-practice/14.md
@@ -104,7 +104,7 @@ Until the 1990s, starch-paste lining remained standard in the KHM Vienna, which 
 
 Although lining was standard practice for centuries, quite a few canvas paintings remained unlined. One such is Gottfried Libalt’s *Still Life with a Bust of Archduke Leopold Wilhelm* (1660; 253 × 119 cm, GG 7795) ([fig. 14.6](#fig-14-6)). Over the years, the painting suffered extensive structural damage: the tears in the original canvas measure 5 meters in total. In storage for centuries, its width was reduced by almost half when large parts of the composition were folded back.
 
-{% figure 'fig-14-6' %}
+{% figure 'fig-14-6' 'pdf-float-top' %}
 
 A new installation at the Kunstkammer gave it a new lease on life; it is paired with the bust that is depicted in the painting.[^23] Libalt’s still life must have been commissioned by Leopold Wilhelm himself. It is listed in his 1659 inventory, though it is dated a year later on the painting itself.
 
