--- a/content/ii-present-practice/8.md
+++ b/content/ii-present-practice/8.md
@@ -16,11 +16,11 @@ abstract: "The previous conservation treatments of Anthony van Dyck’s *Equestr
 
 The *Equestrian Portrait of Charles I* by Anthony van Dyck (NG 1172), painted around 1637–38 and monumental in scale (368 × 292.5 cm), imposingly depicts the king as the divinely chosen ruler of Great Britain, celebrating the union between England and Scotland following the accession of Charles’s father, James I, to the throne in 1603 ([fig. 8.1](#fig-8-1)). Van Dyck’s choice of an equestrian portrait not only demonstrates the king’s horsemanship but is also deliberately reminiscent of equestrian statues in ancient Rome that were intended as assertions of temporal power. It was painted toward the end of a period of relative prosperity in England and set in a tranquil English landscape, shortly before the country was plunged into a bloody civil war in which Charles lost the throne—and his head, when he was executed on January 30, 1649. The depiction of this poignant moment in English history has ensured its popularity with visitors to the National Gallery and its importance within the collection. Only rarely has it been taken off display, and it normally hangs in room 31, where it creates an imposing impression and forms a vista to draw the public into the gallery as they enter through the Central Hall.
 
-{% figure 'fig-8-1' %}
+{% figure 'fig-8-1' 'pdf-float-top pdf-no-bottom-border' %}
 
 Van Dyck painted the portrait on a twill weave canvas with a black ticking pattern, which has a central horizontal join ([fig. 8.2](#fig-8-2)); it bears Charles I’s original cipher at the center of the reverse. This type of canvas, commonly used for domestic upholstery, was probably chosen for its strength and toughness and because it could be obtained in large widths, making it an attractive choice of material for large paintings. The canvas was prepared with a red-brown ground followed by a thick, oil-based gray priming.
 
-{% figure 'fig-8-2' %}
+{% figure 'fig-8-2' 'pdf-float-top' %}
 
 The decision to fully retreat the picture in 2018 was based on the fact that the lining canvas was detaching from the original and the previously applied varnish and retouchings had discolored significantly. All lining activity at the National Gallery since the late 1970s has entailed the relining of paintings—that is, the replacement of an old and degraded lining with a new one. On the occasions when previously unlined pictures have required structural attention, less-invasive forms of treatment than lining have been selected. In the case of the Van Dyck, the recent relining was a nonimpregnating, nap-bond treatment carried out with an equivalent of Beva 371, Lascaux Heat-Seal Adhesive 375, using a vacuum-envelope technique.
 
@@ -42,7 +42,7 @@ By 1952, Morrill’s lining canvases had embrittled, tearing at the turnover edg
 
 Lucas’s lining also had its problems. The water and ethanol used to remove Morrill’s lining made the original canvas buckle and undulate, and these problems were not addressed with any flattening treatments before relining. The relining was initially carried out with the painting facedown, and the lining canvas, stretched onto a loom and prepared with the wax resin, was placed on top of it—a standard procedure at the time. The lining canvas was ironed from the reverse, lightly tacking the painting to the lining, which was then turned faceup so that the ironing could continue over the facing tissue covering the front of the picture. The temperature of the irons was reduced, and the wax adhesive did not get hot enough to form an even layer nor form a good bond between the two canvases. The result was that the rippled undulations caused during the delining remained and, due to the considerably uneven distribution of wax, more pronounced lumps and bumps were created in the picture surface ([fig. 8.4](#fig-8-4)). By 2018, the painting was detaching from the lining, particularly at the edges.
 
-{% figure 'fig-8-4' %}
+{% figure 'fig-8-4' 'pdf-float-top' %}
 
 ## The Recent Treatment
 
